--- a/scilab/modules/metanet/src/c/nometanet/nometanet.vcproj
+++ b/scilab/modules/metanet/src/c/nometanet/nometanet.vcproj
@@ -44,8 +44,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../../core/includes;../../../../output_stream/includes;../../../../localization/includes;../../../../../libs/intl;../../../api_scilab/includes"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;_DEBUG;_WINDOWS;_USRDLL;NOMETANET_EXPORTS"
+				AdditionalIncludeDirectories="../../../../core/includes;../../../../output_stream/includes;../../../../localization/includes;../../../../../libs/intl;../../../../api_scilab/includes;../../../includes"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;_DEBUG;_WINDOWS;_USRDLL;METANET_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
@@ -70,7 +70,7 @@
 				AdditionalDependencies=" ../../../../../bin/libintl.lib"
 				OutputFile="../../../../../bin/$(ProjectName).dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile="nometanet.def"
+				ModuleDefinitionFile=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -126,8 +126,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../../core/includes;../../../../output_stream/includes;../../../../localization/includes;../../../../../libs/intl;../../../api_scilab/includes"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;_DEBUG;_WINDOWS;_USRDLL;NOMETANET_EXPORTS"
+				AdditionalIncludeDirectories="../../../../core/includes;../../../../output_stream/includes;../../../../localization/includes;../../../../../libs/intl;../../../../api_scilab/includes;../../../includes"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;_DEBUG;_WINDOWS;_USRDLL;METANET_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
@@ -152,7 +152,7 @@
 				AdditionalDependencies=" ../../../../../bin/libintl.lib"
 				OutputFile="../../../../../bin/$(ProjectName).dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile="nometanet.def"
+				ModuleDefinitionFile=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
@@ -210,8 +210,8 @@
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories="../../../../core/includes;../../../../output_stream/includes;../../../../localization/includes;../../../../../libs/intl;../../../api_scilab/includes"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;NDEBUG;_WINDOWS;_USRDLL;NOMETANET_EXPORTS"
+				AdditionalIncludeDirectories="../../../../core/includes;../../../../output_stream/includes;../../../../localization/includes;../../../../../libs/intl;../../../../api_scilab/includes;../../../includes"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;NDEBUG;_WINDOWS;_USRDLL;METANET_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableEnhancedInstructionSet="0"
@@ -236,7 +236,7 @@
 				AdditionalDependencies=" ../../../../../bin/libintl.lib"
 				OutputFile="../../../../../bin/$(ProjectName).dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile="nometanet.def"
+				ModuleDefinitionFile=""
 				GenerateDebugInformation="false"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -299,8 +299,8 @@
 				InlineFunctionExpansion="1"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories="../../../../core/includes;../../../../output_stream/includes;../../../../localization/includes;../../../../../libs/intl;../../../api_scilab/includes"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;NDEBUG;_WINDOWS;_USRDLL;NOMETANET_EXPORTS"
+				AdditionalIncludeDirectories="../../../../core/includes;../../../../output_stream/includes;../../../../localization/includes;../../../../../libs/intl;../../../../api_scilab/includes;../../../includes"
+				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE;FORDLL;NDEBUG;_WINDOWS;_USRDLL;METANET_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableEnhancedInstructionSet="0"
@@ -325,7 +325,7 @@
 				AdditionalDependencies=" ../../../../../bin/libintl.lib"
 				OutputFile="../../../../../bin/$(ProjectName).dll"
 				LinkIncremental="1"
-				ModuleDefinitionFile="nometanet.def"
+				ModuleDefinitionFile=""
 				GenerateDebugInformation="false"
 				SubSystem="2"
 				OptimizeReferences="2"
